--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.senta.dataextractorapp.MainActivity"
-            android:label="@string/app_name" />
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name="com.senta.dataextractorapp.login.LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".login.EulaActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
