--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:theme="@style/Theme.AppCompat" />
         <activity
             android:name="com.senta.dataextractorapp.login.LoginActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" />
 
         <activity
